# backend/routes/api.php
@@ -6,6 +6,7 @@ use App\Http\Controllers\AuthController;
 use App\Http\Controllers\UserController;
 use App\Http\Controllers\ConductorController;
 use App\Http\Controllers\VehiculoController;
+use App\Http\Controllers\AsociacionController;
 
 Route::middleware(['auth:sanctum', 'role:admin'])->group(function () {
     Route::get('/users', [UserController::class, 'index']);
@@ -19,7 +20,14 @@ Route::middleware(['auth:sanctum', 'role:admin'])->group(function () {
     Route::get('/vehiculos', [VehiculoController::class, 'index']);
     Route::post('/vehiculos', [VehiculoController::class, 'store']);
     Route::put('/vehiculos/{id}', [VehiculoController::class, 'update']);
-    Route::delete('/vehiculos/{id}', [VehiculoController::class, 'destroy']); //en caso de errores revisar
+    Route::delete('/vehiculos/{id}', [VehiculoController::class, 'destroy']);
+
+    Route::get('/asociaciones', [AsociacionController::class, 'index']);
+    Route::post('/asociaciones', [AsociacionController::class, 'store']);
+    Route::put('/asociaciones/{id}', [AsociacionController::class, 'update']);
+    Route::delete('/asociaciones/{id}', [AsociacionController::class, 'destroy']);
+    Route::post('/asociacion-conductores', [AsociacionController::class, 'asignarConductor']);
+    Route::delete('/asociacion-conductores/{id}', [AsociacionController::class, 'desasignarConductor']);
 });
 
 Route::middleware(['auth:sanctum', 'role:admin|driver|client'])->get('/user', [AuthController::class, 'user']);
